--- a/style.css
+++ b/style.css
@@ -38,6 +38,22 @@ h1 {
     line-height: normal;
 }
 
+.back-icon {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    width: 45px;
+    height: 45px;
+    cursor: pointer;
+    z-index: 5000;
+}
+
+.back-icon img {
+    width: 100%;
+    height: 100%;
+    pointer-events: auto;
+}
+
 @media (max-width: 805px) {
     .container {
         flex-direction: column; /* Stack the columns vertically */
